{
    "name": "Player_Controls",
    "maps": [
        {
            "name": "Player1",
            "id": "edd91490-1412-43ab-83bf-548edd422293",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "ebe93f6b-4483-4c10-8604-d1350fa2459b",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "f81c6585-aec5-4edb-8f2c-db53198be6b6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "4d09afe6-37a7-4055-957a-d213faf024c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftSpell",
                    "type": "Button",
                    "id": "4b55b56a-b093-4026-855e-0b04cb4818fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightSpell",
                    "type": "Button",
                    "id": "b6bc3d88-de88-4761-94b9-df54b51a46ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CombineSpell",
                    "type": "Button",
                    "id": "0a87ccd5-14f8-49e5-9ae4-78285aefcf2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwapLeftSpell",
                    "type": "Button",
                    "id": "d1b1c347-45f5-4e21-b0a6-87733fc9b551",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwapRightSpell",
                    "type": "Button",
                    "id": "893af57a-db8b-4f2c-8b1c-e70198fd9c8d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "7ae4566f-07e4-4136-b5a2-937e5b954cd0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "75192a0a-b1e6-4e82-890e-09e71249fc9c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5132b65c-e37b-4fbd-b6d9-88b3f2199e13",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6febf032-a30c-4281-ad2b-12ca2fac437f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c48423cb-f659-482e-977f-65502b172218",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1aec700f-2460-4a13-93a2-11495c061e2f",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aac5105b-24ca-40a4-bf2d-d3df38119088",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Player",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "RightAndLeftClick",
                    "id": "80619524-08cc-4b2a-91a9-5093aa324915",
                    "path": "OneModifier",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "CombineSpell",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "48110e91-358e-45fd-8f10-74ed0acb2f84",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CombineSpell",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "d3c440cc-8a7b-41cf-a3d9-f9045fd6d078",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CombineSpell",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0fc5e297-dc6c-4b0b-8ad4-803c327835f5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "LeftSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69fce274-de88-4e30-b210-5429fd48fdeb",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "RightSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "266d7985-988a-4844-82cf-64d553ca3e3c",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapLeftSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5b993a1-1ce4-4000-82b5-62bf668522f0",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwapRightSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Player",
            "bindingGroup": "Player",
            "devices": []
        }
    ]
}